--- a/sonar-response.Rmd
+++ b/sonar-response.Rmd
@@ -5,8 +5,13 @@ output:
     df_print: paged
 ---
 
-```{r setup, echo=FALSE, message=FALSE}
+```{r global_options, include=FALSE}
+knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
+```
+
+```{r setup}
 library(tidyverse)
+library(scales)
 ```
 
 What are the energetic consequences for cetaceans when exposed to sonar? The following model makes a first order approximation by estimating (1) the energy intake lost to foraging cessation and (2) the additional energy expenditure from increased swim speeds. We considered these two factors in four potential scenarios: 
@@ -29,6 +34,42 @@ knitr::kable(refs)
 ```
 
 ## Functional responses
+
+*Fill me in*
+
 ```{r fun_resp}
 
 ```
+
+## Energetic parameters
+
+Energy acquired from prey scales sublinearly among odontocetes [E~p~=0.12M~c~^0.81^] but superlinearly among mysticetes [E~p~=5.83M~c~^2.37^]. *Note: Jeremy's paper has a negative coefficient for mysticete E~p~ scaling (v8.3:115) but I think that's a mistake.*
+
+```{r Ep_scaling}
+# Vaquita to sperm whale
+odo_m_rng <- c(50, 41e3)
+# Minke to blue whale (eyeballed from Kahane-Rapport and Goldbogen 2018, Fig 2)
+mys_m_rng <- c(10^3.6, 10^5.25)
+
+Ep_fun <- function(m, clade) {
+  ifelse(clade == "Odontocete", 
+         0.12 * m ^ 0.81, 
+         5.83 * m ^ 2.37)
+}
+
+Ep_tbl <- tibble(M = c(odo_m_rng, mys_m_rng),
+                 Clade = factor(c(rep("Odontocete", 2), rep ("Mysticete", 2))),
+                 Ep = Ep_fun(M, Clade))
+
+ggplot(Ep_tbl, aes(M, Ep, color = Clade)) + 
+  geom_line(size = 2) +
+  scale_x_log10(name = "Mass (kg)",
+                labels = trans_format("log10", math_format(10 ^ .x))) +
+  scale_y_log10(name = "Energy from prey (Joules?)",
+                labels = trans_format("log10", math_format(10 ^ .x))) +
+  scale_color_brewer(type = "qual", palette = 6) +
+  theme_classic() +
+  theme(legend.position = c(.2, .8))
+```
+
+*If I understand correctly, E~p~ is energy per feeding event, so to get energy intake per unit time we also need the scaling equation for feeding rate. Figure 2 in Jeremy's paper has [feeding events / dive] ~ [dive time - TADL]. Can we get feeding rates from something like that?*
